# replicado-python

./: .env.example  .gitignore  README.md  pyproject.toml
.agent/rules/: regras-basicas.md
replicado/: __init__.py  aex.py  bempatrimoniado.py  beneficio.py  cartao.py  ceu.py  connection.py  convenio.py  estrutura.py  financeiro.py  graduacao.py  lattes.py  pesquisa.py  pessoa.py  posgraduacao.py  utils.py
scripts/: debug_lattes_full.py  debug_lattes_structure.py  list_tables.py  report_formandos.py  reproduce_connection.py  validate_financeiro.py  validate_graduacao.py  validate_lattes.py  validate_pessoa.py  validate_posgraduacao.py  validate_vucatr.py  validate_vuceu_classes.py  validate_vuceu_pessoa.py  verify_estrutura.py  verify_schema_bioterio.py  verify_schema_citacoes_qualis.py  verify_schema_financeiro.py  verify_schema_frota.py  verify_schema_graduacao.py  verify_schema_lattes.py  verify_schema_pesquisa.py  verify_schema_pessoa.py  verify_schema_posgraduacao.py  verify_schema_questionario_grad.py  verify_schema_vuben.py  verify_schema_vucatr.py  verify_schema_vuceu.py  verify_schema_vuecvn.py  verify_schema_vues.py
temp/relatorios/: lattes_analise.md  questionario_grad_analise.md
tests/: manual_test_all.py  test_beneficio_mocked.py  test_ceu_mocked.py  test_connection.py  test_convenio_mocked.py  test_financeiro_mocked.py  test_imports.py  test_lattes_mocked.py  test_pesquisa_mocked.py  test_unit_mocked.py  test_utils.py
